--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,6 @@
   min-height: 40px;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color:rgba(0, 0, 0,.5);
@@ -31,7 +30,7 @@
 ul li{
   display: flex;
   flex-direction: row;
-  
+  color:white;
   list-style-type: none;
   width:100%;
   word-spacing: 5px;
@@ -59,10 +58,32 @@ h4 {
   background-position: center;
 } */
 .main {
+  display: flex;
+  flex-direction: row;
+  /* justify-content: center; */
   background-color: #936B6C;
-  
+  background-color: rgba(150,100,100,.3);
+  border-radius: 5%;
+  margin-bottom:20px;
+  margin-top:20px;
+  margin-left:10px;
+  margin-right:10px;
+
   height:120px;
   box-shadow: 0 20px 8px 0 rgba(107, 107, 0, 0.2), 0 6px 20px 8px rgba(107, 79, 79),0 6px 2px 0 rgba(0, 0, 0,.5);
+}
+.mainImg {
+  border-radius: 20%;
+  box-shadow: 0 20px 8px 0 rgba(107, 107, 0, 0.2), 0 6px 20px 8px rgba(107, 79, 79),0 6px 2px 0 rgba(0, 0, 0,.5);
+  opacity:80%;
+}
+h2 {
+  color:white;
+  background-color:brown;
+  opacity:.8;
+}
+img:nth-of-type(){
+  float: right;
 }
 img {
   height:120px;
@@ -72,7 +93,7 @@ img {
 
 .left-nav {
   float: left;
-  height: 100vh;
+  height: 150vh;
   width:10%;
   /* background-color: grey; */
   /* border-style: double; */
@@ -82,8 +103,8 @@ img {
   background-image:  url("https://camanoislandcoffee.com/wp-content/uploads/2015/12/Coffee-Strength-vs-Roast.jpg");
   background-position: 100px ;
   box-shadow: 0 20px 8px 0 rgba(107, 107, 0, 0.2), 0 6px 20px 0 rgba(107, 79, 79);
-  margin-left:20px;
-  
+  margin-left:40px;
+  margin-top:50px;
   
   
   
@@ -98,19 +119,34 @@ img {
 }
 .right-nav {
   float: right;
-  height: 100vh;
+  height: 150vh;
   border-radius:10px;
   width:10%;
   /* background-color: blueviolet; */
   margin-right:10px;
   background-image: url("https://cmkt-image-prd.freetls.fastly.net/0.1.0/ps/4423621/910/607/m2/fpnw/wm0/_mg_7215-.jpg?1525810534&s=439e5f3411eea8423e3e14a68a292f28");
   box-shadow: 0 20px 8px 0 rgba(107, 107, 0, 0.2), 0 6px 20px 0 rgba(107, 79, 79),0 6px 2px 0 rgba(255, 255, 79);
+  margin-right: 40px;
+  margin-top:50px;
 }
 .App-link {
   color: #61dafb;
   
 }
+footer {
+  background-image: url("https://media.giphy.com/media/l1J3Khw3q7FFP6V68/giphy.gif");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: aliceblue;
+  height:50px;
+  margin-top:50%;
+  margin-left: 160px;
+  margin-right: 160px;
 
+}
+Example {
+  margin-right: 40%;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -118,4 +154,97 @@ img {
   to {
     transform: rotate(360deg);
   }
+}
+li >span {
+  color:blue;
+}
+.card {
+  display:grid;
+  margin-left:20px;
+  width:300px;
+  padding-left:20px;
+  grid-template-columns: 3 2fr;
+  grid-template-rows: 3 1fr;
+  grid-gap:20px;
+  border: 2px solid black;
+}
+.roasterData {
+  box-shadow: 0 17px 8px 0 rgba(107, 107, 0, 0.2), 0 6px 20px 8px rgba(107, 79, 79), 0 6px 2px 0 rgba(0, 0, 0,.5);  /* margin-left: 40%; */
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  display: inline-block;
+  width: 400px;
+  margin: 11px 20px;
+  
+}
+div.roasterInfo {
+  width:500px;
+  z-index: 2;
+  margin-top:-40px;
+}
+ul{
+  grid-template-columns: repeat(2, 1fr);
+  align-items: left;
+  text-align: left;
+  font-weight: 900;
+  background-image:url(https://www.sierrarizing.com/assets/espresso-drink-780x418.jpg);
+  opacity: .6;
+  
+}
+button {
+  color:white;
+  box-shadow: 0 20px 8px 0 rgba(107, 107, 0, 0.2), 0 6px 20px 8px rgba(107, 79, 79),0 6px 2px 0 rgba(0, 0, 0,.5);
+  border-radius: 15%;
+  font-size: 16px;
+  background-color: rgba(0, 0, 0,0.8);
+}
+.roasterFormContainer {
+  
+  width:310px;
+  align-content: left;
+  justify-content: left;
+  text-align: center;
+  margin-left: 40%;
+  box-shadow: 0 20px 8px 0 rgba(107, 107, 0, 0.2), 0 6px 20px 8px rgba(107, 79, 79),0 6px 2px 0 rgba(0, 0, 0,.5);
+  
+
+}
+input.input {
+  Width:300px;
+  box-shadow: 0 20px 8px 0 rgba(107, 107, 0, 0.2), 0 6px 20px 8px rgba(107, 79, 79),0 6px 2px 0 rgba(0, 0, 0,.5);box-shadow:0 20px 8px 0 rgba(107, 107, 0, 0.2), ;
+}
+a:hover {
+  color: rgba(255, 255, 200, 0.5);
+  transition: all 1s ease;
+}
+a {
+  color: white;
+  display: flexbox;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-basis: 20px;
+  text-decoration: none;
+  font-weight: 900;
+  text-transform: uppercase;
+  z-index: 10;
+  font-size: 14px;
+  background-color: black;
+}
+.nav {
+  color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  z-index: 10;
+  text-align: left;
+  box-shadow: 0 20px 8px 0 rgba(107, 107, 0, 0.2), 0 6px 20px 8px rgba(107, 79, 79),0 6px 2px 0 rgba(0, 0, 0,.5);box-shadow:0 20px 8px 0 rgba(107, 107, 0, 0.2), ;
+  background-color: rgba(0, 0, 0, .8);
+  border-radius: 2%;
+  height: 50px;
+}
+.roasterDataRepeat {
+  border: 2px solid black;
+  align-items: center;
+  background-color: rosybrown;
 }
