--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
   }
 }
 
-.App-header {
+/* .App-header {
 
   background-color: #282c34;
   min-height: 40px;
@@ -26,7 +26,7 @@
   color:rgba(0, 0, 0,.5);
   background-color:lightblue
   
-}
+} */
 ul li{
   display: flex;
   flex-direction: row;
@@ -93,7 +93,7 @@ img {
 
 .left-nav {
   float: left;
-  height: 150vh;
+  height: 100vh;
   width:10%;
   /* background-color: grey; */
   /* border-style: double; */
@@ -104,9 +104,9 @@ img {
   background-position: 100px ;
   box-shadow: 0 20px 8px 0 rgba(107, 107, 0, 0.2), 0 6px 20px 0 rgba(107, 79, 79);
   margin-left:40px;
-  margin-top:50px;
+  margin-top:150px;
   
-  
+
   
 }
 .left-nav li {
@@ -119,30 +119,61 @@ img {
 }
 .right-nav {
   float: right;
-  height: 150vh;
+  height: 100vh;
   border-radius:10px;
   width:10%;
-  /* background-color: blueviolet; */
   margin-right:10px;
   background-image: url("https://cmkt-image-prd.freetls.fastly.net/0.1.0/ps/4423621/910/607/m2/fpnw/wm0/_mg_7215-.jpg?1525810534&s=439e5f3411eea8423e3e14a68a292f28");
   box-shadow: 0 20px 8px 0 rgba(107, 107, 0, 0.2), 0 6px 20px 0 rgba(107, 79, 79),0 6px 2px 0 rgba(255, 255, 79);
   margin-right: 40px;
-  margin-top:50px;
+  margin-top:150px;
+
 }
 .App-link {
   color: #61dafb;
   
 }
-footer {
-  background-image: url("https://media.giphy.com/media/l1J3Khw3q7FFP6V68/giphy.gif");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: aliceblue;
-  height:50px;
-  margin-top:50%;
-  margin-left: 160px;
-  margin-right: 160px;
+.title{
+  margin-top:40px;
+  font-family: 'Source Code Pro', monospace;
+  font-size: 40px;
+  font-weight: bold;
+  letter-spacing: 10px;
+}
+.footer {
+  position: fixed;
+  bottom:0;
+  width: 100%;
+  height: 50px;
+  background-color: black;
+}
+.square{
+  color:white;
+  margin-top:180px;
+  background-color: gray;
+  width:800px;
+  height:500px;
+  margin-left: 300px;
+  display: flex;
+  background-image: url("https://www.thoughtco.com/thmb/rkMuni0DYnhjO94mqy5fzbRxDXU=/2233x1256/smart/filters:no_upscale()/GettyImages-936840910-5c8ea8b2c9e77c0001ff0ae6.jpg");
+  background-size: 120%;
 
+}
+.mainSquare {
+  color:black;
+  flex: 1;
+  flex-direction: row;
+  width:100px;
+  border:2px solid black;
+  margin:20px;
+  opacity: .6;
+  background-color: white;
+  
+
+}
+.logo{
+width:70px;
+height:70px;
 }
 Example {
   margin-right: 40%;
@@ -183,6 +214,11 @@ div.roasterInfo {
   z-index: 2;
   margin-top:-40px;
 }
+.login-buttons{
+  border-radius: 2%;
+  border:1px solid white;
+  padding:2px;
+}
 ul{
   grid-template-columns: repeat(2, 1fr);
   align-items: left;
@@ -193,11 +229,13 @@ ul{
   
 }
 button {
-  color:white;
+  color:black;
   box-shadow: 0 20px 8px 0 rgba(107, 107, 0, 0.2), 0 6px 20px 8px rgba(107, 79, 79),0 6px 2px 0 rgba(0, 0, 0,.5);
-  border-radius: 15%;
+  /* border-radius: 15%; */
   font-size: 16px;
-  background-color: rgba(0, 0, 0,0.8);
+  /* background-color: rgba(255, 255, 255,0.8); */
+  margin-top:10px;
+  z-index: 0;
 }
 .roasterFormContainer {
   
@@ -215,7 +253,7 @@ input.input {
   box-shadow: 0 20px 8px 0 rgba(107, 107, 0, 0.2), 0 6px 20px 8px rgba(107, 79, 79),0 6px 2px 0 rgba(0, 0, 0,.5);box-shadow:0 20px 8px 0 rgba(107, 107, 0, 0.2), ;
 }
 a:hover {
-  color: rgba(255, 255, 200, 0.5);
+  color: rgba(0, 0, 200, 0.5);
   transition: all 1s ease;
 }
 a {
@@ -223,25 +261,44 @@ a {
   display: flexbox;
   flex-direction: row;
   justify-content: space-evenly;
-  flex-basis: 20px;
+  margin-bottom:0px;
   text-decoration: none;
   font-weight: 900;
   text-transform: uppercase;
   z-index: 10;
   font-size: 14px;
-  background-color: black;
+  box-shadow: 0 20px 8px 0 rgba(107, 107, 0, 0.2), 0 6px 20px 8px rgba(107, 79, 79),0 6px 2px 0 rgba(0, 0, 0,.5);box-shadow:0 20px 8px 0 rgba(107, 107, 0, 0.2), ;
+
 }
+
+
+
 .nav {
   color: white;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  z-index: 10;
+  /* z-index: 12; */
   text-align: left;
   box-shadow: 0 20px 8px 0 rgba(107, 107, 0, 0.2), 0 6px 20px 8px rgba(107, 79, 79),0 6px 2px 0 rgba(0, 0, 0,.5);box-shadow:0 20px 8px 0 rgba(107, 107, 0, 0.2), ;
+  /* background-color: rgba(0, 0, 0, .2); */
   background-color: rgba(0, 0, 0, .8);
   border-radius: 2%;
   height: 50px;
+  position: relative;
+  margin-top:-50px;
+  left: 0;
+
+}
+
+.vine{
+  z-index: 23;
+  height:50px;
+  width:50%;
+  /* position: relative; */
+  /* left: 0; */
+  /* border: 1px red solid; */
+  /* margin-top: 200; */
 }
 .roasterDataRepeat {
   border: 2px solid black;
