--- a/src/App.css
+++ b/src/App.css
@@ -87,7 +87,7 @@ img {
 
 .left-nav {
   float: left;
-  height: 100vh;
+  height:150vh;
   width: 10%;
   /* background-color: grey; */
   /* border-style: double; */
@@ -110,7 +110,7 @@ img {
 }
 .right-nav {
   float: right;
-  height: 100vh;
+  height: 150vh;
   border-radius: 10px;
   width: 10%;
   margin-right: 10px;
@@ -141,7 +141,7 @@ img {
   color: white;
   margin-top: 180px;
   background-color: gray;
-  width: 800px;
+  width: 60%;
   height: 500px;
   margin-left: 300px;
   display: flex;
@@ -149,9 +149,9 @@ img {
   background-size: 120%;
 }
 .mainSquare {
-  color: black;
   flex: 1;
   flex-direction: row;
+  line-break: loose;
   width: 100px;
   border: 2px solid black;
   margin: 20px;
@@ -238,6 +238,18 @@ button {
   box-shadow: 0 20px 8px 0 rgba(107, 107, 0, 0.2),
     0 6px 20px 8px rgba(107, 79, 79), 0 6px 2px 0 rgba(0, 0, 0, 0.5);
 }
+.coffeeFormContainer {
+  /* border-radius: 5%; */
+  width: 60%;
+  align-content: center;
+  justify-content: center;
+  text-align:left;
+  padding-left: 10px;
+  margin-left: 20%;
+  margin-right:20%;
+  box-shadow: 0 20px 8px 0 rgba(107, 107, 0, 0.2),
+    0 6px 20px 8px rgba(107, 79, 79), 0 6px 2px 0 rgba(0, 0, 0, 0.5);
+}
 input.input {
   /* width: 80%; */
   box-shadow: 0 20px 8px 0 rgba(107, 107, 0, 0.2),
@@ -249,11 +261,11 @@ input {
   width:80%;
 }
 a:hover {
-  color: rgba(0, 0, 200, 0.5);
+  color: rgba(0, 0, 0, 0.5);
   transition: all 1s ease;
 }
 a {
-  color: white;
+  color: rgba(200,200,200,.5);
   display: flexbox;
   flex-direction: row;
   justify-content: space-evenly;
@@ -283,7 +295,7 @@ a {
   border-radius: 2%;
   height: 50px;
   position: relative;
-  margin-top: -50px;
+  margin-top: -53px;
   left: 0;
 }
 
@@ -297,6 +309,12 @@ a {
   /* margin-top: 200; */
 }
 .roasterDataRepeat {
+  border: 2px solid black;
+  align-items: center;
+  background-color: rosybrown;
+}
+
+.coffeeDataRepeat {
   border: 2px solid black;
   align-items: center;
   background-color: rosybrown;
@@ -319,6 +337,29 @@ a {
     0 6px 20px 8px rgba(107, 79, 79);
 }
 
+.Coffees > li {
+  box-shadow: 0 20px 8px 0 rgba(107, 107, 0, 0.2),
+    0 6px 20px 8px rgba(107, 79, 79), 0 6px 2px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: 0 20px 8px 0 rgba(107, 107, 0, 0.2);
+  border: 2px solid black;
+  color: blue;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  list-style-type: none;
+  width: 25%;
+  align-items: center;
+  text-align: center;
+  margin-left: 20%;
+  margin-bottom: 20px;
+  text-shadow: 0 20px 8px 0 rgba(107, 107, 0, 0.2),
+    0 6px 20px 8px rgba(107, 79, 79);
+}
+.Coffee {
+  font-size: 20px;
+  flex:1;
+  /* display: flex; */
+  /* margin-left: 0px; */
+}
 .Roasters {
   font-size: 20px;
   flex:1;
@@ -351,4 +392,12 @@ a {
   display: none;
   background-color: gray;
   overflow: hidden;
+}
+.text{
+  line-height: 20px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.feedback{
+  margin-top:100px;
 }
