--- a/src/App.css
+++ b/src/App.css
@@ -181,7 +181,7 @@ Example {
 li > span {
   color: blue;
 }
-.card {
+/* .card {
   display: grid;
   margin-left: 20px;
   width: 300px;
@@ -190,7 +190,7 @@ li > span {
   grid-template-rows: 3 1fr;
   grid-gap: 20px;
   border: 2px solid black;
-}
+} */
 .roasterData {
   box-shadow: 0 17px 8px 0 rgba(107, 107, 0, 0.2),
     0 6px 20px 8px rgba(107, 79, 79), 0 6px 2px 0 rgba(0, 0, 0, 0.5); /* margin-left: 40%; */
@@ -438,8 +438,9 @@ align-content: center;
 div .roaster-name{
   display:flexbox;
   flex-direction: column;
-  background-color: rgba(107, 79, 79,.8);
-  color:black;
+  background-color: rgba(0,0, 50, .8);
+  color:white;
+  font-family: 'Barlow Condensed', sans-serif;
   font-size: 30px;
   box-shadow: 0px 0px 0px 0 rgba(107, 107, 0, 0.2),
   0px -10px 20px 20px rgba(107, 79, 79);
@@ -452,8 +453,8 @@ div .roaster-image {
 }
 .roasters-page-parent{
   margin-top:120px;
-  margin-right:20px;
-  margin-left:20px;
+  margin-right:30px;
+  margin-left:30px;
   width:30%;
   display:inline-grid;
   grid-template-columns: repear(3, 1fr);
@@ -463,7 +464,7 @@ div .roaster-image {
 border: 2px solid blue;
 } */
 
-@media screen and (max-width: 320px){
+@media screen and (max-width: 321px){
   .title{
     display: none;
   }
