--- a/src/App.css
+++ b/src/App.css
@@ -440,7 +440,7 @@ div .roaster-name{
   flex-direction: column;
   background-color: rgba(0,0, 50, .8);
   color:white;
-  font-family: 'Barlow Condensed', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 30px;
   box-shadow: 0px 0px 0px 0 rgba(107, 107, 0, 0.2),
   0px -10px 20px 20px rgba(107, 79, 79);
