--- a/src/App.css
+++ b/src/App.css
@@ -349,10 +349,12 @@ a {
 }
 
 .panel {
+  /* display: none; */
   padding: 0 18px;
-  display: none;
+  
   background-color: gray;
   overflow: hidden;
+ 
 }
 .text{
   line-height: 20px;
@@ -369,14 +371,17 @@ li {
 }
 .roaster-pg-data{
   color:black;
+  
 }
 div .roaster-name{
+  max-width: 500px;
+  overflow-wrap: inherit;
   display:flexbox;
   flex-direction: column;
   background-color: rgba(0,0, 50, .8);
   color:white;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 30px;
+  font-size: 25px;
   box-shadow: 0px 0px 0px 0 rgba(107, 107, 0, 0.2),
   0px -10px 20px 20px rgba(107, 79, 79);
   border-radius: 5%;
@@ -398,14 +403,16 @@ div .roaster-image {
 
 @media screen and (max-width: 321px){
   .title{
-    display: none;
+   font-size:15px;
   }
 
   .roaster-pg-data{
     color:black;
+   
   }
   div .roaster-name{
-    
+    max-width: 250px;
+    overflow: hidden;
     color:white;
     font-size: 20px;
     height:100%;
@@ -425,6 +432,6 @@ div .roaster-image {
     margin-right:20px;
     margin-left:20px;
     width:stretch;
-  
   }
+
 }
